--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="bottomRefresh">새로고침</string>
     <string name="sideLogin">로그인</string>
     <string name="sideLogout">로그아웃</string>
+    <string name="sideDownloadSetting">경로 설정</string>
 </resources>
